--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,7 +12,9 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  scroll-behavior: auto;
 }
+
 
 a {
   font-weight: 500;
