--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background: linear-gradient(to right, #240b36, #c31432);
+  background: linear-gradient(to right, #240b36, #c31432, #240b36, #c31432);
 
 
   font-synthesis: none;
