--- a/frontend/src/view/components/style/footer.css
+++ b/frontend/src/view/components/style/footer.css
@@ -34,6 +34,8 @@
 .footer-logo {
     font-size: 1.8rem;
     font-weight: bold;
+    margin-bottom: 10px;
+    margin-left: -15px;
 }
 
 .footer-section p {
@@ -61,6 +63,13 @@
     margin-right: 15px;
     text-decoration: none;
     transition: color 0.3s ease;
+    
+}
+
+.footer-logo img {
+    height: 60px;
+    vertical-align: middle;
+    margin-right: -10px;
 }
 
 .footer-section.social .social-links a:hover {
