--- a/frontend/src/view/components/style/infbar.css
+++ b/frontend/src/view/components/style/infbar.css
@@ -46,6 +46,7 @@
     opacity: 0.6;
     filter: grayscale(1) brightness(0.8);
     transition: all 0.3s ease;
+    cursor: pointer;
 }
 
 .logo-item img:hover {
