--- a/frontend/src/view/components/style/footer.css
+++ b/frontend/src/view/components/style/footer.css
@@ -60,6 +60,7 @@
 
 .footer-section.social .social-links a {
     color: #a7a7a7;
+    font-size: 1rem;
     margin-right: 15px;
     text-decoration: none;
     transition: color 0.3s ease;
