--- a/frontend/src/view/pages/pages-style/benefits.css
+++ b/frontend/src/view/pages/pages-style/benefits.css
@@ -32,15 +32,6 @@
     animation-timeline: view(50% 0%);
 }
 
-@keyframes slideLeft {
-    from {
-        clip-path: inset(0 100% 0 0);
-    } 
-    to {
-        clip-path: inset(0 0 0 0);
-    }
-}
-
 .benefits-header p {
     font-size: 1.4rem;
     color: rgba(255, 255, 255, 0.7);
@@ -107,7 +98,13 @@
 .benefits-footer p {
     font-size: 1rem;
     color: rgba(255, 255, 255, 0.7);
-    animation: fadeInUp both;
+    animation: slideLeft both;
+    animation-timeline: view(70% 10%);
+}
+
+.benefits-footer button{
+    animation: slideLeft both;
+    animation-timeline: view(70% 10%);
 }
 
 /* Keyframe Animations */
@@ -141,5 +138,14 @@
     to {
         opacity: 1;
         transform: translateY(0);
+    }
+}
+
+@keyframes slideLeft {
+    from {
+        clip-path: inset(0 100% 0 0);
+    } 
+    to {
+        clip-path: inset(0 0 0 0);
     }
 }
