--- a/frontend/src/view/pages/pages-style/contact.css
+++ b/frontend/src/view/pages/pages-style/contact.css
@@ -5,7 +5,7 @@
     min-height: 100vh;
     width: 100vw;
     padding: 8rem 2rem 3rem;
-    background: linear-gradient(to right, #240b36, #c31432);
+    background: linear-gradient(to right, #c31432, #240b36, #240b36, #c31432);
     color: #fff;
     box-sizing: border-box;
     display: flex;
