--- a/frontend/src/view/pages/pages-style/benefits.css
+++ b/frontend/src/view/pages/pages-style/benefits.css
@@ -52,8 +52,8 @@
     padding: 2rem;
     border-radius: 10px;
     text-align: center;
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    transition: transform 0.3s ease, box-shadow 0.3s ease, border-color 0.3s ease;
+    border: 1px solid rgba(255, 255, 255, 1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
     animation: popIn 0.5s ease-out forwards;
     animation-timeline: view(100% 10%);
     opacity: 0; /* Start hidden for animation */
@@ -67,9 +67,8 @@
 
 
 .benefit-card:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-    border-color: #e85d41;
+    transform: translateY(-10px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
 
 .benefit-icon {
@@ -150,3 +149,4 @@
         clip-path: inset(0 0 0 0);
     }
 }
+
