--- a/frontend/src/view/pages/pages-style/contact.css
+++ b/frontend/src/view/pages/pages-style/contact.css
@@ -15,12 +15,13 @@
 
 .contact-header {
     text-align: center;
-    margin-bottom: 3rem;
+    margin-bottom: 0rem;
 }
 
 .contact-header h1 {
     font-size: 3.5rem;
     margin-bottom: 0.5rem;
+    margin-top: -1rem;
 }
 
 .contact-header p {
